Closed
Bug 300721
Opened 20 years ago
Closed 20 years ago
italicized bogus characters lead to gap and overlapping text
Categories
(Core Graveyard :: GFX: Mac, defect, P3)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8beta4
People
(Reporter: jruderman, Assigned: sfraser_bugs)
References
Details
Attachments
(2 files)
|
469 bytes,
text/html
|
Details | |
|
8.05 KB,
patch
|
jaas
:
review+
jhpedemonte
:
review+
benjamin
:
approval1.8b4+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b3) Gecko/20050713
Firefox/1.0+
Steps to reproduce:
1. Load the testcase.
Result: There is a gap in Michael's name where there should be a question mark,
and his name overlaps with the date.
Bug 138883 might be related.
| Reporter | ||
Comment 1•20 years ago
|
||
Updated•20 years ago
|
Component: Layout: Fonts and Text → GFX: Mac
Updated•20 years ago
|
Assignee: nobody → joshmoz
QA Contact: layout.fonts-and-text → mac
Comment 2•20 years ago
|
||
How is this different than bug 138883?
I think this is the same bug as bug 138883, but a lot cleaner :-)
I can repro bug 138883 by forcing encoding to UTF-8 (Camino returns the slashdot
page in that bug as ISO-8859-1), whereas this testcase specifies UTF-8 on an
ISO-8859-1 page so no fiddling is required.
| Assignee | ||
Comment 4•20 years ago
|
||
So this only shows up when the page is using an incorrect glyph for the page
encoding?
| Reporter | ||
Comment 5•20 years ago
|
||
Smokey, I noticed this bug when I loaded a Bugzilla bug report and Firefox
incorrectly treated it as UTF-8. To make the testcase reproducable, I made the
testcase specify that the encoding is UTF-8.
Simon, what else should I test? Characters from an obscure language that Mac OS
X doesn't include fonts for?
| Reporter | ||
Comment 6•20 years ago
|
||
*** Bug 138883 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•20 years ago
|
Assignee: joshmoz → sfraser_bugs
Priority: -- → P3
Target Milestone: --- → mozilla1.8beta4
| Assignee | ||
Comment 7•20 years ago
|
||
This patch also contains some formatting cleanup, and the addition of |const|
on a couple of small static data tables.
Attachment #189630 -
Flags: superreview?(jhpedemonte)
Attachment #189630 -
Flags: review?(joshmoz)
| Assignee | ||
Comment 8•20 years ago
|
||
The gaps in the text resulting in an x offset of the length of the text already
drawn, because of the incorrect logic.
Status: NEW → ASSIGNED
Comment 9•20 years ago
|
||
Comment on attachment 189630 [details] [diff] [review]
Patch: remove use of NS_SUCCEEDED on PRBool return values
Ha! That's quite humorous. Good find.
Attachment #189630 -
Flags: superreview?(jhpedemonte) → review+
Attachment #189630 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Updated•20 years ago
|
Attachment #189630 -
Flags: approval1.8b4?
Updated•20 years ago
|
Attachment #189630 -
Flags: approval1.8b4? → approval1.8b4+
| Assignee | ||
Comment 10•20 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•