Fix bug 300721: odd gaps in italicized text if we hit the ATSUI fallback code. Remove bogus use of NS_SUCCEEDED with PRBool return values. r=joshmoz, sr=jhpedemonte, a=bsmedberg